syntax = "proto3";
package example;

message CalculateRequest {
    int32 a = 1;
    int32 b = 2;
}

message CalculateResponse {
    string debug_message = 1;
    int32  c             = 2;
}